@startuml
skinparam classAttributeIconSize 0
title foundation 1 

class Program {
    main() : void 
}

class Video {
    -_comment : List<Comment> 
    -_title : String
    -author : String
    -duration : int
    +Video(title : String, author : String, duration : int) : void
    + numberOfComments() : string
    +addComment(comment : Comment) : void
    


}

class comment {
    -text : String
    -author : String
    +Comment(text : String, author : String) : void 
}



Program --> Video : creates
Video --> comment : contains

@enduml